--- a/pages/voedingswaarden.html
+++ b/pages/voedingswaarden.html
@@ -12,6 +12,9 @@
     </tr>
     <tr>
         <td>Energie</td>
+        <td>Energie</td>
+        <td>Energie</td>
+        <td>Energie</td>
         <td>630 kcal</td>
     </tr>
     <tr>
