Test once again

--- a/pages/voedingswaarden.html
+++ b/pages/voedingswaarden.html
@@ -31,6 +31,9 @@
     </tr>
     <tr>
         <td>Vet</td>
+        <td>Vet</td>
+        <td>Vet</td>
+        <td>Vet</td>
         <td>26 g</td>
     </tr>
 </table>
